updated documentation, removed an unnecessary space

--- a/jsdoc.config.json
+++ b/jsdoc.config.json
@@ -19,7 +19,7 @@
     "default": {
       "outputSourceFiles": true
     },
-    "systemName": "COMMUNICATOR",
+    "systemName": "VIEW",
     "footer": "",
     "copyright": "Rik Hoffbauer 2015",
     "navType": "vertical",
