--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "eslintConfig": {},
   "dependencies": {
+    "babel-polyfill": "^6.3.14",
     "jquery": "2.1.4",
     "lodash": "^3.10.1",
     "require-globify": "^1.3.0",
