--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "babel-polyfill": "^6.3.14",
     "jquery": "2.1.4",
     "lodash": "^3.10.1",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "require-globify": "^1.3.0",
     "riot": "^2.3.11"
   },
@@ -81,6 +83,7 @@
     "phantomjs-polyfill": "0.0.1",
     "proxyquire": "^1.6.0",
     "proxyquireify": "^2.1.0",
+    "reactify": "^1.1.1",
     "rimraf": "^2.4.1",
     "run-sequence": "^1.1.4",
     "sinon": "^1.15.1",
