--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "eslintConfig": {},
   "dependencies": {
     "babel-polyfill": "^6.3.14",
+    "handlebars": "^4.0.5",
+    "hbsfy": "^2.4.1",
     "jquery": "2.1.4",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
