--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "gulp-shell": "^0.4.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-tar": "^1.4.0",
+    "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.6",
     "include-all": "^0.1.6",
     "install": "^0.1.8",
